add swagger doc
adjust consumedHCoin event handler
