# routes/stageGuessManagement.js
@@ -4,9 +4,22 @@ var StageGuessController = require('../controllers/stageGuess');
 var router = express.Router();
 var stageGuessController = new StageGuessController();
 
+router.get('/', (req, res) => {
+	/* 
+		#swagger.tags = ['StageGuessManagement']
+		#swagger.description = '查詢比賽階段猜測資料'
+	*/
+	var filter = {};
+
+	stageGuessController.get(filter, function(docs){
+		res.json(docs);
+	});
+});
+
+
 router.delete('/', (req, res) => {
 	/* 
-		#swagger.tags = ['StageGuess']
+		#swagger.tags = ['StageGuessManagement']
 		#swagger.description = '刪除比賽階段猜測資料'
 	*/
 	var filter = {};
@@ -21,7 +34,7 @@ router.delete('/', (req, res) => {
 
 router.put('/', (req, res) => {
 	/* 
-		#swagger.tags = ['StageGuess']
+		#swagger.tags = ['StageGuessManagement']
 		#swagger.description = '更新比賽階段猜測資料'
 	*/
 	var stageGuess = req.body;
@@ -34,7 +47,7 @@ router.put('/', (req, res) => {
 
 router.post('/', (req, res) => {
 	/* 
-		#swagger.tags = ['StageGuess']
+		#swagger.tags = ['StageGuessManagement']
 		#swagger.description = '建立新比賽階段猜測資料'
 	*/
 	var stageGuess = req.body;
