# swagger_output.json
@@ -60,13 +60,13 @@
         "tags": [
           "Auth"
         ],
-        "description": "取得玩家自身帳號資訊",
+        "description": "取得使用者授權資訊",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "成功取得玩家自身資訊",
+            "description": "成功取得使用者授權資訊",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/AuthInfo"
             }
           },
           "401": {
@@ -94,38 +94,6 @@
             "schema": {
               "$ref": "#/definitions/Team"
             }
-          }
-        }
-      }
-    },
-    "/api/teamManagement/": {
-      "delete": {
-        "tags": [
-          "TeamManagement"
-        ],
-        "description": "刪除隊伍資訊",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "TeamManagement"
-        ],
-        "description": "更新隊伍資訊",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -184,87 +152,6 @@
         }
       }
     },
-    "/api/guessManagement/": {
-      "get": {
-        "tags": [
-          "GuessManagement"
-        ],
-        "description": "取得使用者預測結果",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "GuessManagement"
-        ],
-        "description": "刪除預測",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "GuessManagement"
-        ],
-        "description": "更新預測",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "_id": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "GuessManagement"
-        ],
-        "description": "建立預測",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/api/match/": {
       "get": {
         "tags": [
@@ -294,38 +181,6 @@
             "schema": {
               "$ref": "#/definitions/Match"
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/matchManagement/": {
-      "delete": {
-        "tags": [
-          "MatchManagement"
-        ],
-        "description": "刪除比賽資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "MatchManagement"
-        ],
-        "description": "更新比賽資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -390,57 +245,19 @@
         }
       }
     },
-    "/api/stageManagement/{id}": {
-      "delete": {
-        "tags": [
-          "Stage"
-        ],
-        "description": "刪除階段",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/stageManagement/": {
-      "put": {
-        "tags": [
-          "Stage"
-        ],
-        "description": "更新階段",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/api/user/self": {
       "get": {
         "tags": [
           "Users"
         ],
-        "description": "查詢使用者自身資訊",
+        "description": "查詢使用者帳號資訊",
         "parameters": [],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "成功查詢使用者帳號資訊",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -473,88 +290,6 @@
               "type": "object",
               "properties": {
                 "consumedHCoins": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/userManagement/": {
-      "get": {
-        "tags": [
-          "Users"
-        ],
-        "description": "查詢使用者資訊",
-        "parameters": [
-          {
-            "name": "googleID",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "name",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "id",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "isPaid",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/userManagement/{id}": {
-      "put": {
-        "tags": [
-          "Users"
-        ],
-        "description": "更新使用者資訊",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "isAdmin": {
-                  "example": "any"
-                },
-                "isPaid": {
                   "example": "any"
                 }
               }
@@ -607,154 +342,6 @@
         }
       }
     },
-    "/api/matchGuessManagement/([a-f0-9]{24})/": {
-      "get": {
-        "tags": [
-          "MatchGuess"
-        ],
-        "description": "查詢比賽猜測資料",
-        "parameters": [
-          {
-            "name": "24",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/matchGuessManagement/": {
-      "delete": {
-        "tags": [
-          "MatchGuess"
-        ],
-        "description": "刪除比賽猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "MatchGuess"
-        ],
-        "description": "更新比賽猜測資料",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "_id": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "MatchGuess"
-        ],
-        "description": "建立比賽猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/stageGuess/": {
-      "get": {
-        "tags": [
-          "StageGuess"
-        ],
-        "description": "查詢比賽階段猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
-    "/api/stageGuessManagement/": {
-      "delete": {
-        "tags": [
-          "StageGuess"
-        ],
-        "description": "刪除比賽階段猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "StageGuess"
-        ],
-        "description": "更新比賽階段猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "StageGuess"
-        ],
-        "description": "建立新比賽階段猜測資料",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/api/balanceStatistic/": {
       "get": {
         "tags": [
@@ -780,7 +367,7 @@
     }
   },
   "definitions": {
-    "User": {
+    "AuthInfo": {
       "type": "object",
       "properties": {
         "_id": {
@@ -974,6 +561,39 @@
             "type": "string",
             "example": "uy"
           }
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "6333b0cd0319f75d3c170282"
+        },
+        "balance": {
+          "type": "number",
+          "example": 980
+        },
+        "remainHCoin": {
+          "type": "number",
+          "example": 0
+        },
+        "totalConsumedHCoin": {
+          "type": "number",
+          "example": 1000000
+        },
+        "h365ID": {
+          "type": "string",
+          "example": "06f3ca92-19a6-4ecf-a518-6e94f9e9e711"
+        },
+        "name": {
+          "type": "string",
+          "example": "06f3ca92-19a6-4ecf-a518-6e94f9e9e711"
+        },
+        "registerDate": {
+          "type": "string",
+          "example": "2022-09-28T02:26:21.301Z"
         }
       }
     }
